{
    "name": "AttackCombo",
    "maps": [
        {
            "name": "Combat",
            "id": "36d7f746-c179-45ee-9c3b-6c2a8ae51a6b",
            "actions": [
                {
                    "name": "LightAttack",
                    "type": "Button",
                    "id": "a10161b7-7336-42f6-8da0-e9b2c0985f66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "28868460-cf0d-4bd8-abaa-91949dc07d5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hey",
                    "type": "Button",
                    "id": "6a29817b-49e1-46a2-9244-42e5d9b18848",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "417e294f-f383-4b2a-bd82-674101a3a70b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2dc5a039-33d7-4318-9eec-615e50b17660",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a7ebdf1-43fe-4660-b025-77c4667d8566",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}